# UWVFTrefftz

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  TODO  absorption.lyx  pyproject.toml  requirements.txt
codeVirginia/: GD.m  GDm.m  dnyGDm.m  dthetan.m  ibetan_wsign.m  thetan.m
data/: ntd_dependency.npz
docs/: .coverage
notebooks/: Fundamental_comparison.ipynb  Fundamental_comparison.py  article_plots.ipynb  checking_terms.ipynb  demo.py  fem_size_check.ipynb  green_plot.ipynb  sandbox_2.ipynb  sandbox_2.py  space_basis_test.ipynb  test_arrayz.py  trend_line.ipynb
notes/: UltraweakFreeSpace.lyx  UltraweakFreeSpace.lyx~  fundamental_exact-lyx23.lyx~  fundamental_exact.lyx  fundamental_exact.lyx~
src/: BIRS_demo.ipynb  BIRS_demo.py  FEM.py  FEM_solution.py  Fundamental_comparison.ipynb  Fundamental_comparison.py  Numerical_checks.ipynb  Trefft_tools.py  Trefftz.py  UWVF_Trefftz_demo.ipynb  UWVF_Trefftz_demo_broken_sides.ipynb  UWVF_Trefftz_demo_full_sides.ipynb  UWVF_Trefftz_demo_full_sides.py  __init__.py  article_plots.ipynb  article_plots.py  block_fluxes.py  boundary_conditions.py  cases.py  checking_terms.ipynb  checking_terms.py  checking_tools.py  cm_0_01_errors.npz  cm_0_1_errors.npz  comparison_finemesh.npz  demo.ipynb  demo.py  domains.py  exact_solution.ipynb  exact_solutions.py  fem_size_check.ipynb  fem_size_check.py  fine_barrier_raw.npz  fine_barrier_with_055_rescaling.npz  fine_barrier_with_quotient_reescaling.npz  fluxes.py  fundamental_outside8.npz  geometry.py  geometry_tools.py  green_new.npz  (+40 more)
tests/: .coverage  conftest.py  (+4 more)
(+63 files in other folders)
