[project]
name = "uwvftrefftz"
version = "0.1.0"
description = "Trefftz method on a waveguide"
authors = [
    {name = "Manuel Pena",email = "mpena991@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
pythonpath = ["src"]
